# course-scraper-api

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: deploy-apprunner.sh
.github/workflows/: deploy.yml  docs.yml
.sops/: prod.env
app/: main.py
app/api/: admin.py  courses.py  ui.py
app/config/: settings.py
app/core/: auth.py  storage.py
static/: index.html  package-lock.json  package.json  vite.config.js
static/css/: styles.css  theme.css
static/src/: App.jsx
static/src/components/: ApiTester.jsx  Navbar.jsx  ProtectedRoute.jsx  S3Browser.jsx  SchoolList.jsx  TaskHistory.jsx
static/src/pages/: CreateEntryPage.jsx  CreateTaskPage.jsx  HomePage.jsx  LoginPage.jsx
static/src/utils/: api.js  filePreview.js
static/swagger/: index.html
ui/: .eslintrc.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
ui/src/: App.tsx  main.tsx
ui/src/components/: ApiTester.tsx  JsonEditor.tsx
ui/src/layouts/: Header.tsx  Shell.tsx  SideMenu.tsx
ui/src/pages/: ApiEndpoints.tsx  CourseListings.tsx  EditCourseListing.tsx  UploadCourseListing.tsx
ui/src/styles/: styled.d.ts  theme.ts
