[project]
name = "course-scraper-api"
version = "0.1.0"
description = "API for managing and accessing schools data"
requires-python = ">=3.11"

dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "python-multipart==0.0.6",
    "jinja2==3.1.2",
    "boto3==1.29.3",
    "redis==5.0.1",
    "pydantic-settings==2.1.0",
    "authlib==1.2.1",
    "httpx==0.25.1",
    "itsdangerous==2.1.2"
]
